--- a/Ideskabelon - web_prog/templates/vis.html
+++ b/Ideskabelon - web_prog/templates/vis.html
@@ -9,6 +9,7 @@
       <p class="article-content">
         {{ i['navn'] }}
       </p>
+      <img src="/fig" alt="" width="100%">
       <form class="form-control" action="vistracker" method="get">
           <button class="form-control" name="id" value="{{ i['id'] }}" type="submit">Se mere</button>
       </form>
