--- a/Ideskabelon - web_prog/templates/vis.html
+++ b/Ideskabelon - web_prog/templates/vis.html
@@ -4,7 +4,7 @@
 <h1>Dine Trackers</h1>
 <div class="container panel">
   {% for i in trackers %}
-  <article class="media content-section" action="/vistracker?id={{ i['id'] }}" method="post">
+  <article class="media content-section">
     <div class="media-body">
       <p class="article-content">
         {{ i['navn'] }}
