Fiks graf indput "graf_numb"

--- a/Ideskabelon - web_prog/templates/vis.html
+++ b/Ideskabelon - web_prog/templates/vis.html
@@ -16,7 +16,7 @@
       </form>--->
       {% endif %}
       {% if not show_but %}
-      <img src="/fig" alt="" width="100%">
+      <img src="/figX/{{ ['graf_numb'] }}" alt="" width="100%">
       <form class="form-control" action="/vistracker?id={{ i['id'] }}" method="post">
         {% if input_var == 0 %}
         <label class="form-control-static" for="text">Indtast måledata:</label>
